--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.16 01:10:09<br />
+<b>start</b> - 2023.02.17 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -36.2<br />
+Hungary_VotiveChurch, not updated, -35.510000000000005<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -31,7 +31,7 @@ Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave, not updated, 0.0<br />
-Australia_QueensGambit-Horse, <b>updated</b>, 155, <a href="https://www.munzee.com/map/r1prds3cr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QueensGambit-Horse.json" target="_blank">json</a><br />
+Australia_QueensGambit-Horse, not updated, 0.0<br />
 USA_CommerceBarnyard kihagyva (100%), <br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.39000000000000057<br />
+USA_LighteksMinnesotaWild, not updated, 0.6199999999999974<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -386,7 +386,7 @@ USA_FBombCedarRapids kihagyva (100%), <br />
 Denmark_FBombHammel kihagyva (100%), <br />
 USA_FBombMcKinney kihagyva (100%), <br />
 USA_FBombTampa kihagyva (100%), <br />
-USA_RoverPin, not updated, 0.0<br />
+USA_RoverPin, not updated, 0.03999999999999915<br />
 USA_EmeraldInAnchorage kihagyva (100%), <br />
 USA_EmeraldInChesterfield kihagyva (100%), <br />
 USA_EmeraldInMcKinney kihagyva (100%), <br />
@@ -465,7 +465,7 @@ Australia_QldJacaranda kihagyva (100%), <br />
 Australia_FairyWren kihagyva (100%), <br />
 Germany_BerlinCardsPin kihagyva (100%), <br />
 Germany_Pretzel kihagyva (100%), <br />
-Germany_AdventurePortal2, not updated, 0.0<br />
+Germany_AdventurePortal2, not updated, 1.0<br />
 Germany_BerlinVoidMapleChess, not updated, 0.701754385964918<br />
 Germany_SweetHeart kihagyva (100%), <br />
 Germany_WittenauerMischMasch, not updated, 0.0<br />
@@ -495,7 +495,7 @@ Denmark_SoparkenMaribo kihagyva (100%), <br />
 Denmark_NonneMaribo kihagyva (100%), <br />
 Denmark_ZeecretSundby kihagyva (100%), <br />
 Denmark_FjerNykobing, not updated, 0.39000000000000057<br />
-Denmark_SpejdernesLejr2022, not updated, 0.0<br />
+Denmark_SpejdernesLejr2022, not updated, 0.030000000000001137<br />
 Denmark_JuletraeIViby kihagyva (100%), <br />
 Denmark_ZeecretViby kihagyva (100%), <br />
 Denmark_NVGogglesSoro kihagyva (100%), <br />
@@ -754,103 +754,6 @@ USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
 UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
 USA_SpyTrain kihagyva (100%), <br />
-USA_GShiftyJewels62West, not updated, 0.48999999999999844<br />
+USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
-Canada_Feb2023HeartGarden, not updated, 0.0<br />
-USA_SpyGlass, not updated, 1.0<br />
-USA_TiedUpInKnotzInRoundRock, not updated, 0.4000000000000057<br />
-USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
-USA_EllisCreekOwl kihagyva (100%), <br />
-USA_EllisCreekOwlFlats, not updated, 0.0<br />
-USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
-USA_GardenGirl kihagyva (100%), <br />
-USA_TexasGoldenTicket kihagyva (100%), <br />
-USA_TexasGoldenTicketFlats, not updated, 0.0<br />
-USA_MarshallMallard kihagyva (100%), <br />
-USA_UncutDiamond kihagyva (100%), <br />
-USA_UncutDiamondFlats kihagyva (100%), <br />
-USA_BabyGroot kihagyva (100%), <br />
-USA_WeatherfordXmasOwl kihagyva (100%), <br />
-USA_AvocatoAvocato kihagyva (100%), <br />
-USA_AvocatoToy, not updated, 0.0<br />
-USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
-USA_BundtiniTrail kihagyva (100%), <br />
-USA_JewelOfAHeart kihagyva (100%), <br />
-USA_LetsTalkAbundtLove kihagyva (100%), <br />
-USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
-USA_Cowtown kihagyva (100%), <br />
-USA_VelmaCrossbow, not updated, 0.0<br />
-USA_Shaggy, not updated, 0.0<br />
-USA_MysteryMachine, not updated, 0.0<br />
-USA_FortWorthFighterJet, not updated, 0.0<br />
-USA_TCUHornedFrogs, not updated, 0.0<br />
-USA_GeowoodstockXVIITexas, not updated, 0.0<br />
-USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, not updated, 0.0<br />
-USA_TexasGeowoodstock2019 kihagyva (100%), <br />
-USA_FortWorthSucculents kihagyva (100%), <br />
-USA_RobVsMatt, not updated, 0.0<br />
-USA_BrightColoredHorse, not updated, 0.0<br />
-USA_BrightColoredHorseFlats, not updated, 0.0<br />
-USA_RuhRohRAGGY, not updated, 0.0<br />
-USA_PrizeWheel kihagyva (100%), <br />
-USA_EvoHedgehog kihagyva (100%), <br />
-USA_SeahorseByTheSeaShore kihagyva (100%), <br />
-USA_LakeForestMixture, <b>updated</b>, 704, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
-USA_GreenvillesAmethystRoad kihagyva (100%), <br />
-USA_SaintMarysHeart kihagyva (100%), <br />
-USA_GreenvilleOhioSpiritTrophy, not updated, 0.0<br />
-USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
-USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
-USA_GreenvilleZodiacWheels kihagyva (100%), <br />
-USA_GreenvilleRUMCircle, not updated, 0.0<br />
-USA_GreenvilleFlatSurprise, not updated, 0.0<br />
-USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
-USA_GreenvilleSouthCarolina, not updated, 0.0<br />
-USA_JaysvilleFlatCircles, not updated, 0.0<br />
-USA_CCTXZeeCret, not updated, 0.0<br />
-USA_DecaturHearts kihagyva (100%), <br />
-USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
-UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
-UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
-USA_ScoobyDooCrossbow, not updated, 0.0<br />
-USA_TexasStateFlag kihagyva (100%), <br />
-USA_Geowoodstock2019 kihagyva (100%), <br />
-USA_MansfieldMuru, not updated, 0.0<br />
-USA_CedarRapidsIAFlag, not updated, 0.0<br />
-Hungary_JewelAndColor kihagyva (100%), <br />
-USA_CRMunzee6thBirthday kihagyva (100%), <br />
-USA_CRAirMysteryTrail kihagyva (100%), <br />
-USA_CRMunzFit20 kihagyva (100%), <br />
-USA_HayesBattlefield kihagyva (100%), <br />
-USA_CREgyptianZodiac kihagyva (100%), <br />
-USA_CherryBombCedarRapids kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
-USA_GCandyCane kihagyva (100%), <br />
-USA_GCandyCaneFlats, not updated, 0.0<br />
-USA_GShamrock kihagyva (100%), <br />
-USA_GShamrockFlats, not updated, 0.0<br />
-----csoportok<br />
-USA_CRJonesParkBirthday7Flats, <b>updated</b>, <a href="https://www.munzee.com/map/9zqydku0v/16.3009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRJonesParkBirthday7Flats.json" target="_blank">json</a><br />
-USA_GreenvilleEvolutionSquare, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u3bp1f/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleEvolutionSquare.json" target="_blank">json</a><br />
-----városok<br />
-Hungary_city_Budapest, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw1keu9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Budapest.json" target="_blank">json</a><br />
-UnitedKingdom_city_Cromer, <b>updated</b>, <a href="https://www.munzee.com/map/u12vje1zv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_Cromer.json" target="_blank">json</a><br />
-USA_city_AppleValley, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwrj4rs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_AppleValley.json" target="_blank">json</a><br />
-USA_city_CedarRapids, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb3kzv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_CedarRapids.json" target="_blank">json</a><br />
-USA_city_FortWorth, <b>updated</b>, <a href="https://www.munzee.com/map/9vf9znt4b/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_FortWorth.json" target="_blank">json</a><br />
-USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
-----felhasználók<br />
-Norbee97_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw30kw9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_all.json" target="_blank">json</a><br />
-Norbee97_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqk7rjj/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_completed.json" target="_blank">json</a><br />
-Rikitan_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vv279/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_all.json" target="_blank">json</a><br />
-Rikitan_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yxmhk/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_empty.json" target="_blank">json</a><br />
-rodrico101_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zqz5kqsw/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_all.json" target="_blank">json</a><br />
-rodrico101_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zqydku0v/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_completed.json" target="_blank">json</a><br />
-rodrico101_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb98mv/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_empty.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.02.16 01:54:07<br />
-összesen 2638<br />
+Canada_Feb2023HeartGarden, <b>updated</b>, 272, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
