--- a/feladat.html
+++ b/feladat.html
@@ -757,3 +757,85 @@ USA_SpyTrain kihagyva (100%), <br />
 USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, <b>updated</b>, 272, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
+USA_SpyGlass, not updated, 1.0<br />
+USA_TiedUpInKnotzInRoundRock, not updated, 0.9000000000000057<br />
+USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
+USA_EllisCreekOwl kihagyva (100%), <br />
+USA_EllisCreekOwlFlats, not updated, 0.0<br />
+USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
+USA_GardenGirl kihagyva (100%), <br />
+USA_TexasGoldenTicket kihagyva (100%), <br />
+USA_TexasGoldenTicketFlats, not updated, 0.0<br />
+USA_MarshallMallard kihagyva (100%), <br />
+USA_UncutDiamond kihagyva (100%), <br />
+USA_UncutDiamondFlats kihagyva (100%), <br />
+USA_BabyGroot kihagyva (100%), <br />
+USA_WeatherfordXmasOwl kihagyva (100%), <br />
+USA_AvocatoAvocato kihagyva (100%), <br />
+USA_AvocatoToy, not updated, 0.0<br />
+USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
+USA_BundtiniTrail kihagyva (100%), <br />
+USA_JewelOfAHeart kihagyva (100%), <br />
+USA_LetsTalkAbundtLove kihagyva (100%), <br />
+USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
+USA_Cowtown kihagyva (100%), <br />
+USA_VelmaCrossbow, not updated, 0.0<br />
+USA_Shaggy, not updated, 0.0<br />
+USA_MysteryMachine, not updated, 0.0<br />
+USA_FortWorthFighterJet, not updated, 0.0<br />
+USA_TCUHornedFrogs, not updated, 0.0<br />
+USA_GeowoodstockXVIITexas, not updated, 0.0<br />
+USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
+USA_TigerKing, not updated, 0.0<br />
+USA_TexasGeowoodstock2019 kihagyva (100%), <br />
+USA_FortWorthSucculents kihagyva (100%), <br />
+USA_RobVsMatt, not updated, 0.0<br />
+USA_BrightColoredHorse, not updated, 0.0<br />
+USA_BrightColoredHorseFlats, not updated, 0.0<br />
+USA_RuhRohRAGGY, not updated, 0.0<br />
+USA_PrizeWheel kihagyva (100%), <br />
+USA_EvoHedgehog kihagyva (100%), <br />
+USA_SeahorseByTheSeaShore kihagyva (100%), <br />
+USA_LakeForestMixture, not updated, 0.10999999999999943<br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+USA_GreenvilleOhioSpiritTrophy, not updated, 0.0<br />
+USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
+USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
+USA_GreenvilleZodiacWheels kihagyva (100%), <br />
+USA_GreenvilleRUMCircle, not updated, 0.0<br />
+USA_GreenvilleFlatSurprise, not updated, 0.0<br />
+USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
+USA_GreenvilleSouthCarolina, not updated, 0.0<br />
+USA_JaysvilleFlatCircles, not updated, 0.0<br />
+USA_CCTXZeeCret, not updated, 0.0<br />
+USA_DecaturHearts kihagyva (100%), <br />
+USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
+UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
+UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.34999999999999787<br />
+USA_ScoobyDooCrossbow, not updated, 0.0<br />
+USA_TexasStateFlag kihagyva (100%), <br />
+USA_Geowoodstock2019 kihagyva (100%), <br />
+USA_MansfieldMuru, not updated, 0.0<br />
+USA_CedarRapidsIAFlag, not updated, 0.0<br />
+Hungary_JewelAndColor kihagyva (100%), <br />
+USA_CRMunzee6thBirthday kihagyva (100%), <br />
+USA_CRAirMysteryTrail kihagyva (100%), <br />
+USA_CRMunzFit20 kihagyva (100%), <br />
+USA_HayesBattlefield kihagyva (100%), <br />
+USA_CREgyptianZodiac kihagyva (100%), <br />
+USA_CherryBombCedarRapids kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
+USA_GCandyCane kihagyva (100%), <br />
+USA_GCandyCaneFlats, not updated, 0.0<br />
+USA_GShamrock kihagyva (100%), <br />
+USA_GShamrockFlats, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.02.17 01:44:48<br />
+összesen 2078<br />
