--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.17 01:10:10<br />
+<b>start</b> - 2023.02.17 09:33:01<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -35.510000000000005<br />
+Hungary_VotiveChurch, not updated, -35.81000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -25,7 +25,7 @@ Finland_Hyvinkaa, not updated, 0.0<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
 Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
-USA_LakewoodPrizewheel, not updated, 0.8799999999999955<br />
+USA_LakewoodPrizewheel, not updated, 0.9199999999999946<br />
 Netherlands_TeaAtGrandma kihagyva (100%), <br />
 Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.6199999999999974<br />
+USA_LighteksMinnesotaWild, not updated, 0.6999999999999957<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -278,7 +278,7 @@ Germany_GeorgeTheFab42, not updated, 0.7899999999999991<br />
 Germany_PaulTheFab43, not updated, 1.0<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
-Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
+Hungary_Crossbow_Tatabanya, not updated, 0.29999999999999716<br />
 Hungary_StroopwafelInvasionInFelsogalla kihagyva (100%), <br />
 Hungary_SZTE, not updated, -16.53<br />
 Hungary_MarioInVac, not updated, 0.0<br />
@@ -756,7 +756,7 @@ UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
 USA_SpyTrain kihagyva (100%), <br />
 USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
-Canada_Feb2023HeartGarden, <b>updated</b>, 272, <a href="https://www.munzee.com/map/c2b82cefg/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_Feb2023HeartGarden.json" target="_blank">json</a><br />
+Canada_Feb2023HeartGarden, not updated, 0.4300000000000068<br />
 USA_SpyGlass, not updated, 1.0<br />
 USA_TiedUpInKnotzInRoundRock, not updated, 0.9000000000000057<br />
 USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
@@ -798,7 +798,7 @@ USA_RuhRohRAGGY, not updated, 0.0<br />
 USA_PrizeWheel kihagyva (100%), <br />
 USA_EvoHedgehog kihagyva (100%), <br />
 USA_SeahorseByTheSeaShore kihagyva (100%), <br />
-USA_LakeForestMixture, not updated, 0.10999999999999943<br />
+USA_LakeForestMixture, not updated, 0.14000000000000057<br />
 USA_GreenvillesAmethystRoad kihagyva (100%), <br />
 USA_SaintMarysHeart kihagyva (100%), <br />
 USA_GreenvilleOhioSpiritTrophy, not updated, 0.0<br />
@@ -833,9 +833,4 @@ USA_GCandyCane kihagyva (100%), <br />
 USA_GCandyCaneFlats, not updated, 0.0<br />
 USA_GShamrock kihagyva (100%), <br />
 USA_GShamrockFlats, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.02.17 01:44:48<br />
-összesen 2078<br />
+USA_GPumpkin, <b>updated</b>, 304, <a href="https://www.munzee.com/map/dngce8yzz/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GPumpkin.json" target="_blank">json</a> <b>100%</b><br />
