--- a/feladat.html
+++ b/feladat.html
@@ -835,3 +835,4 @@ USA_GShamrock kihagyva (100%), <br />
 USA_GShamrockFlats, not updated, 0.0<br />
 USA_GPumpkin, <b>updated</b>, 304, <a href="https://www.munzee.com/map/dngce8yzz/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GPumpkin.json" target="_blank">json</a> <b>100%</b><br />
 USA_GPumpkinFlats, <b>updated</b>, 149, <a href="https://www.munzee.com/map/dngce8yzz/16.2009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GPumpkinFlats.json" target="_blank">json</a><br />
+USA_Mauhaus, <b>updated</b>, 68, <a href="https://www.munzee.com/map/9yzg8sq7e/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Mauhaus.json" target="_blank">json</a><br />
