--- a/feladat.html
+++ b/feladat.html
@@ -838,3 +838,4 @@ USA_GPumpkinFlats, <b>updated</b>, 149, <a href="https://www.munzee.com/map/dngc
 USA_Mauhaus, <b>updated</b>, 68, <a href="https://www.munzee.com/map/9yzg8sq7e/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Mauhaus.json" target="_blank">json</a><br />
 USA_GToyotaCrossbows, <b>updated</b>, 245, <a href="https://www.munzee.com/map/dngck5pff/14.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyotaCrossbows.json" target="_blank">json</a><br />
 USA_GToyotaCrossbowsBiggy, <b>updated</b>, 383, <a href="https://www.munzee.com/map/dngck1ncz/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyotaCrossbowsBiggy.json" target="_blank">json</a><br />
+USA_GToyota, <b>updated</b>, 355, <a href="https://www.munzee.com/map/dngcs2y4b/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyota.json" target="_blank">json</a> <b>100%</b><br />
