--- a/feladat.html
+++ b/feladat.html
@@ -840,3 +840,4 @@ USA_GToyotaCrossbows, <b>updated</b>, 245, <a href="https://www.munzee.com/map/d
 USA_GToyotaCrossbowsBiggy, <b>updated</b>, 383, <a href="https://www.munzee.com/map/dngck1ncz/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyotaCrossbowsBiggy.json" target="_blank">json</a><br />
 USA_GToyota, <b>updated</b>, 355, <a href="https://www.munzee.com/map/dngcs2y4b/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyota.json" target="_blank">json</a> <b>100%</b><br />
 USA_GToyotaFlats, <b>updated</b>, 119, <a href="https://www.munzee.com/map/dngcs2y4b/15.8009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyotaFlats.json" target="_blank">json</a><br />
+USA_GJewelBelt, <b>updated</b>, 486, <a href="https://www.munzee.com/map/dngc74908/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GJewelBelt.json" target="_blank">json</a><br />
