--- a/feladat.html
+++ b/feladat.html
@@ -841,3 +841,4 @@ USA_GToyotaCrossbowsBiggy, <b>updated</b>, 383, <a href="https://www.munzee.com/
 USA_GToyota, <b>updated</b>, 355, <a href="https://www.munzee.com/map/dngcs2y4b/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyota.json" target="_blank">json</a> <b>100%</b><br />
 USA_GToyotaFlats, <b>updated</b>, 119, <a href="https://www.munzee.com/map/dngcs2y4b/15.8009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyotaFlats.json" target="_blank">json</a><br />
 USA_GJewelBelt, <b>updated</b>, 486, <a href="https://www.munzee.com/map/dngc74908/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GJewelBelt.json" target="_blank">json</a><br />
+USA_GEvoBelt, <b>updated</b>, 291, <a href="https://www.munzee.com/map/dngc72cf6/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GEvoBelt.json" target="_blank">json</a><br />
