--- a/feladat.html
+++ b/feladat.html
@@ -842,3 +842,4 @@ USA_GToyota, <b>updated</b>, 355, <a href="https://www.munzee.com/map/dngcs2y4b/
 USA_GToyotaFlats, <b>updated</b>, 119, <a href="https://www.munzee.com/map/dngcs2y4b/15.8009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GToyotaFlats.json" target="_blank">json</a><br />
 USA_GJewelBelt, <b>updated</b>, 486, <a href="https://www.munzee.com/map/dngc74908/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GJewelBelt.json" target="_blank">json</a><br />
 USA_GEvoBelt, <b>updated</b>, 291, <a href="https://www.munzee.com/map/dngc72cf6/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GEvoBelt.json" target="_blank">json</a><br />
+USA_GBypassMixed, <b>updated</b>, 417, <a href="https://www.munzee.com/map/dngce1ppv/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GBypassMixed.json" target="_blank">json</a><br />
