--- a/feladat.html
+++ b/feladat.html
@@ -843,3 +843,4 @@ USA_GToyotaFlats, <b>updated</b>, 119, <a href="https://www.munzee.com/map/dngcs
 USA_GJewelBelt, <b>updated</b>, 486, <a href="https://www.munzee.com/map/dngc74908/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GJewelBelt.json" target="_blank">json</a><br />
 USA_GEvoBelt, <b>updated</b>, 291, <a href="https://www.munzee.com/map/dngc72cf6/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GEvoBelt.json" target="_blank">json</a><br />
 USA_GBypassMixed, <b>updated</b>, 417, <a href="https://www.munzee.com/map/dngce1ppv/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GBypassMixed.json" target="_blank">json</a><br />
+USA_G62WestEvo, <b>updated</b>, 72, <a href="https://www.munzee.com/map/dngc4yqbr/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_G62WestEvo.json" target="_blank">json</a><br />
