--- a/feladat.html
+++ b/feladat.html
@@ -846,3 +846,4 @@ USA_GBypassMixed, <b>updated</b>, 417, <a href="https://www.munzee.com/map/dngce
 USA_G62WestEvo, <b>updated</b>, 72, <a href="https://www.munzee.com/map/dngc4yqbr/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_G62WestEvo.json" target="_blank">json</a><br />
 USA_NoelridgeMysteryFlats, <b>updated</b>, 402, <a href="https://www.munzee.com/map/9zqz432fm/16.0009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NoelridgeMysteryFlats.json" target="_blank">json</a> <b>100%</b><br />
 USA_GSouthland, <b>updated</b>, 139, <a href="https://www.munzee.com/map/dngck0p7f/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GSouthland.json" target="_blank">json</a><br />
+USA_GMorning, <b>updated</b>, 326, <a href="https://www.munzee.com/map/dngckp9qj/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GMorning.json" target="_blank">json</a><br />
