--- a/feladat.html
+++ b/feladat.html
@@ -848,3 +848,4 @@ USA_NoelridgeMysteryFlats, <b>updated</b>, 402, <a href="https://www.munzee.com/
 USA_GSouthland, <b>updated</b>, 139, <a href="https://www.munzee.com/map/dngck0p7f/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GSouthland.json" target="_blank">json</a><br />
 USA_GMorning, <b>updated</b>, 326, <a href="https://www.munzee.com/map/dngckp9qj/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GMorning.json" target="_blank">json</a><br />
 USA_GCHampionWay, <b>updated</b>, 367, <a href="https://www.munzee.com/map/dngcknw6w/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GCHampionWay.json" target="_blank">json</a><br />
+USA_GGamingTable, <b>updated</b>, 403, <a href="https://www.munzee.com/map/dngckw4bb/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GGamingTable.json" target="_blank">json</a><br />
