--- a/feladat.html
+++ b/feladat.html
@@ -849,3 +849,4 @@ USA_GSouthland, <b>updated</b>, 139, <a href="https://www.munzee.com/map/dngck0p
 USA_GMorning, <b>updated</b>, 326, <a href="https://www.munzee.com/map/dngckp9qj/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GMorning.json" target="_blank">json</a><br />
 USA_GCHampionWay, <b>updated</b>, 367, <a href="https://www.munzee.com/map/dngcknw6w/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GCHampionWay.json" target="_blank">json</a><br />
 USA_GGamingTable, <b>updated</b>, 403, <a href="https://www.munzee.com/map/dngckw4bb/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GGamingTable.json" target="_blank">json</a><br />
+USA_PotOfGold, <b>updated</b>, 83, <a href="https://www.munzee.com/map/dngckkwpb/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOfGold.json" target="_blank">json</a><br />
