--- a/feladat.html
+++ b/feladat.html
@@ -852,3 +852,4 @@ USA_GGamingTable, <b>updated</b>, 403, <a href="https://www.munzee.com/map/dngck
 USA_PotOfGold, <b>updated</b>, 83, <a href="https://www.munzee.com/map/dngckkwpb/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOfGold.json" target="_blank">json</a><br />
 USA_WitchsHat, <b>updated</b>, 362, <a href="https://www.munzee.com/map/dngc7uuuy/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WitchsHat.json" target="_blank">json</a><br />
 USA_OwensboroRiverboat, <b>updated</b>, 1174, <a href="https://www.munzee.com/map/dndncu1bx/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OwensboroRiverboat.json" target="_blank">json</a><br />
+USA_OwensboroRiverboatFlats, <b>updated</b>, 67, <a href="https://www.munzee.com/map/dndncu1bx/15.3009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OwensboroRiverboatFlats.json" target="_blank">json</a><br />
