--- a/feladat.html
+++ b/feladat.html
@@ -858,3 +858,4 @@ Netherlands_RobAndLouise, <b>updated</b>, 924, <a href="https://www.munzee.com/m
 USA_TaylorSwiftTheEras, <b>updated</b>, 81, <a href="https://www.munzee.com/map/dp5gfxzt7/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TaylorSwiftTheEras.json" target="_blank">json</a><br />
 USA_GreenSpyFrog, <b>updated</b>, 226, <a href="https://www.munzee.com/map/djf8je247/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenSpyFrog.json" target="_blank">json</a> <b>100%</b><br />
 USA_PotOZees, <b>updated</b>, 299, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a><br />
+USA_MaineWeatherBalloon, <b>updated</b>, 58, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
