--- a/feladat.html
+++ b/feladat.html
@@ -859,3 +859,4 @@ USA_TaylorSwiftTheEras, <b>updated</b>, 81, <a href="https://www.munzee.com/map/
 USA_GreenSpyFrog, <b>updated</b>, 226, <a href="https://www.munzee.com/map/djf8je247/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenSpyFrog.json" target="_blank">json</a> <b>100%</b><br />
 USA_PotOZees, <b>updated</b>, 299, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a><br />
 USA_MaineWeatherBalloon, <b>updated</b>, 58, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
+USA_HappyHoliday20, <b>updated</b>, 232, <a href="https://www.munzee.com/map/dng1swr9f/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HappyHoliday20.json" target="_blank">json</a><br />
