--- a/feladat.html
+++ b/feladat.html
@@ -864,3 +864,4 @@ USA_HazardSpurCampton, <b>updated</b>, 48, <a href="https://www.munzee.com/map/d
 USA_HazardSpurCamptonFlats, <b>updated</b>, 69, <a href="https://www.munzee.com/map/dnswdtbdw/16.2009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HazardSpurCamptonFlats.json" target="_blank">json</a><br />
 USA_CrossedArrowsOwensboro, <b>updated</b>, 326, <a href="https://www.munzee.com/map/dndnc6w0p/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CrossedArrowsOwensboro.json" target="_blank">json</a><br />
 USA_GHarmony, <b>updated</b>, 198, <a href="https://www.munzee.com/map/dngc5yuwh/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GHarmony.json" target="_blank">json</a> <b>100%</b><br />
+USA_GHarmonyFlats, <b>updated</b>, 191, <a href="https://www.munzee.com/map/dngc5yuwh/16.3009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GHarmonyFlats.json" target="_blank">json</a><br />
