--- a/feladat.html
+++ b/feladat.html
@@ -859,3 +859,25 @@ USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
 USA_PotOZees, not updated, 0.9199999999999875<br />
 USA_MaineWeatherBalloon, <b>updated</b>, 57, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
+USA_HappyHoliday20, not updated, 0.0<br />
+USA_HazardSpurCampton, not updated, 0.0<br />
+USA_HazardSpurCamptonFlats, not updated, 0.0<br />
+USA_CrossedArrowsOwensboro, not updated, 0.0<br />
+USA_GHarmony kihagyva (100%), <br />
+USA_GHarmonyFlats, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+Lithuania_city_Vilnius, <b>updated</b>, <a href="https://www.munzee.com/map/u99zqup56/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_city_Vilnius.json" target="_blank">json</a><br />
+USA_city_AppleValley, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwrj4rs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_AppleValley.json" target="_blank">json</a><br />
+USA_city_CedarRapids, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb3kzv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_CedarRapids.json" target="_blank">json</a><br />
+USA_city_Georgetown, <b>updated</b>, <a href="https://www.munzee.com/map/dngce8yzz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Georgetown.json" target="_blank">json</a><br />
+USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
+USA_city_Montgomery, <b>updated</b>, <a href="https://www.munzee.com/map/djf8m22fr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Montgomery.json" target="_blank">json</a><br />
+----felhasználók<br />
+rodrico101_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zqz5kqsw/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_all.json" target="_blank">json</a><br />
+rodrico101_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zqydku0v/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_completed.json" target="_blank">json</a><br />
+tlmeadowlark_all, <b>updated</b>, <a href="https://www.munzee.com/map/djf8kbee5/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_all.json" target="_blank">json</a><br />
+tlmeadowlark_completed, <b>updated</b>, <a href="https://www.munzee.com/map/dnhdug6cs/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/tlmeadowlark_completed.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.02.18 01:56:20<br />
+összesen 2771<br />
