--- a/feladat.html
+++ b/feladat.html
@@ -858,3 +858,4 @@ Netherlands_RobAndLouise kihagyva (100%), <br />
 USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
 USA_PotOZees, <b>updated</b>, 282, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a><br />
+USA_MaineWeatherBalloon, <b>updated</b>, 64, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
