--- a/feladat.html
+++ b/feladat.html
@@ -859,3 +859,10 @@ USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
 USA_PotOZees, <b>updated</b>, 282, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a><br />
 USA_MaineWeatherBalloon, <b>updated</b>, 64, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
+USA_HappyHoliday20, not updated, 0.0<br />
+USA_HazardSpurCampton, not updated, 0.0<br />
+USA_HazardSpurCamptonFlats, not updated, 0.0<br />
+USA_CrossedArrowsOwensboro, not updated, 0.0<br />
+USA_GHarmony kihagyva (100%), <br />
+USA_GHarmonyFlats, not updated, 0.0<br />
+USA_MontgomeryChiliPepper, <b>updated</b>, 131, <a href="https://www.munzee.com/map/djf8jkbv0/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MontgomeryChiliPepper.json" target="_blank">json</a><br />
