--- a/feladat.html
+++ b/feladat.html
@@ -866,3 +866,4 @@ USA_CrossedArrowsOwensboro, not updated, 0.0<br />
 USA_GHarmony kihagyva (100%), <br />
 USA_GHarmonyFlats, not updated, 0.0<br />
 USA_MontgomeryChiliPepper, <b>updated</b>, 131, <a href="https://www.munzee.com/map/djf8jkbv0/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MontgomeryChiliPepper.json" target="_blank">json</a><br />
+USA_ConcordHearts, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9yzg0jgfv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ConcordHearts.json" target="_blank">json</a> <b>100%</b><br />
