--- a/feladat.html
+++ b/feladat.html
@@ -868,3 +868,4 @@ USA_GHarmonyFlats, not updated, 0.0<br />
 USA_MontgomeryChiliPepper, <b>updated</b>, 131, <a href="https://www.munzee.com/map/djf8jkbv0/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MontgomeryChiliPepper.json" target="_blank">json</a><br />
 USA_ConcordHearts, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9yzg0jgfv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ConcordHearts.json" target="_blank">json</a> <b>100%</b><br />
 USA_WalkieTalkieWatch, <b>updated</b>, 87, <a href="https://www.munzee.com/map/9yzs8td5m/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WalkieTalkieWatch.json" target="_blank">json</a> <b>100%</b><br />
+USA_StPetersNVG, <b>updated</b>, 81, <a href="https://www.munzee.com/map/9yzs8v6bn/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StPetersNVG.json" target="_blank">json</a> <b>100%</b><br />
