--- a/feladat.html
+++ b/feladat.html
@@ -870,3 +870,4 @@ USA_ConcordHearts, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9yzg0
 USA_WalkieTalkieWatch, <b>updated</b>, 87, <a href="https://www.munzee.com/map/9yzs8td5m/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WalkieTalkieWatch.json" target="_blank">json</a> <b>100%</b><br />
 USA_StPetersNVG, <b>updated</b>, 81, <a href="https://www.munzee.com/map/9yzs8v6bn/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StPetersNVG.json" target="_blank">json</a> <b>100%</b><br />
 USA_FoxHillFit, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzsuf5pu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FoxHillFit.json" target="_blank">json</a><br />
+USA_CelticKnot, <b>updated</b>, 322, <a href="https://www.munzee.com/map/9yzs2r3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticKnot.json" target="_blank">json</a><br />
