--- a/feladat.html
+++ b/feladat.html
@@ -872,3 +872,4 @@ USA_StPetersNVG, <b>updated</b>, 81, <a href="https://www.munzee.com/map/9yzs8v6
 USA_FoxHillFit, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzsuf5pu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FoxHillFit.json" target="_blank">json</a><br />
 USA_CelticKnot, <b>updated</b>, 322, <a href="https://www.munzee.com/map/9yzs2r3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticKnot.json" target="_blank">json</a><br />
 USA_STLPirateShip, <b>updated</b>, 190, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
+USA_BluesMunzee, <b>updated</b>, 695, <a href="https://www.munzee.com/map/9yzgd9yne/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BluesMunzee.json" target="_blank">json</a><br />
