--- a/feladat.html
+++ b/feladat.html
@@ -874,3 +874,4 @@ USA_CelticKnot, <b>updated</b>, 322, <a href="https://www.munzee.com/map/9yzs2r3
 USA_STLPirateShip, <b>updated</b>, 190, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
 USA_BluesMunzee, <b>updated</b>, 695, <a href="https://www.munzee.com/map/9yzgd9yne/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BluesMunzee.json" target="_blank">json</a><br />
 USA_HowellViking, <b>updated</b>, 190, <a href="https://www.munzee.com/map/9yzs2dshg/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HowellViking.json" target="_blank">json</a><br />
+USA_STLPokeball, <b>updated</b>, 109, <a href="https://www.munzee.com/map/9yzg3ukw5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPokeball.json" target="_blank">json</a><br />
