--- a/feladat.html
+++ b/feladat.html
@@ -876,3 +876,4 @@ USA_BluesMunzee, <b>updated</b>, 695, <a href="https://www.munzee.com/map/9yzgd9
 USA_HowellViking, <b>updated</b>, 190, <a href="https://www.munzee.com/map/9yzs2dshg/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HowellViking.json" target="_blank">json</a><br />
 USA_STLPokeball, <b>updated</b>, 109, <a href="https://www.munzee.com/map/9yzg3ukw5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPokeball.json" target="_blank">json</a><br />
 USA_STLTardis, <b>updated</b>, 164, <a href="https://www.munzee.com/map/9yzg3wnjp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLTardis.json" target="_blank">json</a><br />
+USA_KirkwoodEvolutions1, <b>updated</b>, 173, <a href="https://www.munzee.com/map/9yzeqxeqn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions1.json" target="_blank">json</a><br />
