--- a/feladat.html
+++ b/feladat.html
@@ -878,3 +878,4 @@ USA_STLPokeball, <b>updated</b>, 109, <a href="https://www.munzee.com/map/9yzg3u
 USA_STLTardis, <b>updated</b>, 164, <a href="https://www.munzee.com/map/9yzg3wnjp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLTardis.json" target="_blank">json</a><br />
 USA_KirkwoodEvolutions1, <b>updated</b>, 173, <a href="https://www.munzee.com/map/9yzeqxeqn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions1.json" target="_blank">json</a><br />
 USA_KirkwoodEvolutions2, <b>updated</b>, 141, <a href="https://www.munzee.com/map/9yzew8ewz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions2.json" target="_blank">json</a><br />
+USA_KirkwoodEvolutions3, <b>updated</b>, 71, <a href="https://www.munzee.com/map/9yzew83ct/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions3.json" target="_blank">json</a><br />
