--- a/feladat.html
+++ b/feladat.html
@@ -888,3 +888,11 @@ USA_ZBriefcase, <b>updated</b>, 67, <a href="https://www.munzee.com/map/9yzs8jty
 USA_WinterCardinalFeather, <b>updated</b>, 48, <a href="https://www.munzee.com/map/9yzsdcxnq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WinterCardinalFeather.json" target="_blank">json</a> <b>100%</b><br />
 USA_Chickadee, <b>updated</b>, 198, <a href="https://www.munzee.com/map/9yzep8yfh/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Chickadee.json" target="_blank">json</a> <b>100%</b><br />
 USA_FlatDogBone, <b>updated</b>, 77, <a href="https://www.munzee.com/map/9yzser03w/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatDogBone.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+Lithuania_city_Vilnius, <b>updated</b>, <a href="https://www.munzee.com/map/u99zqup56/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_city_Vilnius.json" target="_blank">json</a><br />
+USA_city_Montgomery, <b>updated</b>, <a href="https://www.munzee.com/map/djf8m22fr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Montgomery.json" target="_blank">json</a><br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.02.18 18:26:38<br />
+összesen 6596<br />
