--- a/feladat.html
+++ b/feladat.html
@@ -836,3 +836,39 @@ USA_GShamrockFlats, not updated, 0.0<br />
 USA_GPumpkin kihagyva (100%), <br />
 USA_GPumpkinFlats, not updated, 0.0<br />
 USA_Mauhaus, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9yzg8sq7e/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Mauhaus.json" target="_blank">json</a><br />
+USA_GToyotaCrossbows, not updated, 0.0<br />
+USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
+USA_GToyota kihagyva (100%), <br />
+USA_GToyotaFlats, not updated, 0.0<br />
+USA_GJewelBelt, not updated, 0.0<br />
+USA_GEvoBelt, not updated, 0.0<br />
+USA_GBypassMixed, not updated, 0.0<br />
+USA_G62WestEvo, not updated, 0.0<br />
+USA_NoelridgeMysteryFlats kihagyva (100%), <br />
+USA_GSouthland, not updated, 0.1999999999999993<br />
+USA_GMorning, not updated, 0.0<br />
+USA_GCHampionWay, not updated, 0.0<br />
+USA_GGamingTable, not updated, 0.0<br />
+USA_PotOfGold, not updated, 0.0<br />
+USA_WitchsHat, not updated, 0.0<br />
+USA_OwensboroRiverboat, not updated, 0.0<br />
+USA_OwensboroRiverboatFlats, not updated, 0.0<br />
+Lithuania_SeskinesSkulpturyParkas, not updated, 0.0<br />
+Netherlands_RobAndLouise kihagyva (100%), <br />
+USA_TaylorSwiftTheEras, not updated, 0.0<br />
+USA_GreenSpyFrog kihagyva (100%), <br />
+USA_PotOZees, not updated, 0.6099999999999994<br />
+USA_MaineWeatherBalloon, not updated, 0.0<br />
+USA_HappyHoliday20, not updated, 0.0<br />
+USA_HazardSpurCampton, not updated, 0.0<br />
+USA_HazardSpurCamptonFlats, not updated, 0.0<br />
+USA_CrossedArrowsOwensboro, not updated, 0.0<br />
+USA_GHarmony kihagyva (100%), <br />
+USA_GHarmonyFlats, not updated, 0.0<br />
+USA_MontgomeryChiliPepper, not updated, 0.0<br />
+USA_ConcordHearts kihagyva (100%), <br />
+USA_WalkieTalkieWatch kihagyva (100%), <br />
+USA_StPetersNVG kihagyva (100%), <br />
+USA_FoxHillFit, not updated, 0.0<br />
+USA_CelticKnot, not updated, 0.0<br />
+USA_STLPirateShip, <b>updated</b>, 201, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
